[package]
name = "pixel-art-rust-yew"
version = "0.1.0"
description = "Try out Yew with a simple webapp"
repository = "https://github.com/hwallis93/pixel-art-rust-yew"
edition="2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.18"
yewdux = "0.6"
yewtil = "0.3"
